--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,14 +16,15 @@ set-option -g status-position top
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.dotfiles/tmux/plugins/'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavor 'mocha'
-set -g @catppuccin_window_status_style "rounded"
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Support for nvim colorscheme
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-# Make the status line pretty and add some modules
+# Catppuccin config
+set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_status_style "rounded"
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
